# mcp

./: .gitignore  README.md  main.py  pyproject.toml
mcp_webhook/: MCP_WEBHOOK.MD  example.apps_script  main_mcp_server.py  main_webhook.py
mcp_webhook/example/: example.claude_desktop_config.json
service/: sheet_service.py
